--- a/src/pages/clubs/components/new/new.scss
+++ b/src/pages/clubs/components/new/new.scss
@@ -7,6 +7,7 @@
 	align-items: center;
 	justify-content: center;
 	background-color: $backgroundColor;
+	position: relative;
 
 	.container {
 		position: relative;
