--- a/src/pages/competitionInfo/components/ciLanding.scss
+++ b/src/pages/competitionInfo/components/ciLanding.scss
@@ -1,8 +1,8 @@
 @import "../../../global.scss";
 
 .ciLanding {
-	height: 100vh;
-	width: 100vw;
+	// height: 100vh;
+	// width: 100vw;
 	position: relative;
 	overflow: hidden;
 	background: linear-gradient(
@@ -17,8 +17,8 @@
 	background-position: center;
 
 	.wrapper {
-		height: 100%;
-		width: 100%;
+		height: 100vh;
+		width: 100vw;
 		overflow: hidden;
 		position: relative;
 		display: flex;
@@ -27,8 +27,9 @@
 		position: relative;
 
 		.welcome {
-			height: 300px;
-			width: 650px;
+			height: 40vh;
+			min-height: 160px;
+			width: 47%;
 			padding: 25px 25px;
 			border-radius: 15px;
 			background: rgb(211, 211, 211);
@@ -57,11 +58,11 @@
 				justify-content: center;
 				font-weight: 700;
 				h2 {
-					font-size: 40px;
+					font-size: 3vw;
 				}
 
 				h3 {
-					font-size: 40px;
+					font-size: 3vw;
 				}
 			}
 
@@ -74,18 +75,18 @@
 				.btn-container {
 					position: absolute;
 					bottom: 5px;
-					height: 180px;
-					width: 675px;
+					height: 23vh;
+					width: 50vw;
 					display: flex;
 					flex-wrap: wrap;
 					align-items: center;
 					justify-content: center;
 
 					.btn {
-						margin: 10px;
-						width: 250px;
-						height: 55px;
-						font-size: 18px;
+						margin: 1%;
+						width: 20vw;
+						height: 30%;
+						font-size: clamp(0.5rem, 1.2vw, 1.2rem);
 						font-family: Hind;
 						color: rgb(255, 255, 255);
 						background-color: $buttonColor;
@@ -93,10 +94,10 @@
 						border-style: none;
 						border-radius: 15px;
 						cursor: pointer;
-						transition: all 0.5s ease;
 
 						&:hover {
 							background-color: $buttonHover;
+							transition: all 0.3s ease;
 						}
 					}
 				}
