--- a/src/pages/home/components/competition/competitionInfo.scss
+++ b/src/pages/home/components/competition/competitionInfo.scss
@@ -29,49 +29,8 @@
 			img {
 				height: 100%;
 				width: 100%;
+				object-fit: scale-down;
 			}
-
-			// 	.c-top {
-			// 		background-color: $black;
-			// 		color: white;
-			// 		display: flex;
-			// 		flex-direction: column;
-			// 		align-items: center;
-			// 		justify-content: center;
-			// 		border: 10px solid white;
-			// 		position: absolute;
-			// 		width: 600px;
-			// 		height: 200px;
-			// 		top: 5%;
-			// 		z-index: 2;
-			// 		h1 {
-			// 			padding: 3px;
-			// 			font-family: Saira;
-			// 			font-weight: 700;
-			// 			font-size: 45px;
-			// 			line-height: 71px;
-			// 		}
-
-			// 		h2 {
-			// 			font-family: Hind;
-			// 			font-weight: 600;
-			// 			font-size: 25px;
-			// 			line-height: 40px;
-			// 			padding-bottom: 3px;
-			// 		}
-			// 	}
-			// 	.c-bottom {
-			// 		width: 75%;
-			// 		position: absolute;
-			// 		bottom: 0;
-			// 		img {
-			// 			width: 100%;
-			// 			object-fit: cover;
-			// 			display: flex;
-			// 			align-items: center;
-			// 			justify-content: center;
-			// 		}
-			// 	}
 		}
 	}
 }
