--- a/src/pages/home/components/landing/landing.scss
+++ b/src/pages/home/components/landing/landing.scss
@@ -17,8 +17,8 @@
 	background-position: center;
 
 	.wrapper {
-		height: 100%;
-		width: 100%;
+		height: 100vh;
+		width: 100vw;
 		overflow: hidden;
 		position: relative;
 		display: flex;
@@ -27,8 +27,10 @@
 		position: relative;
 
 		.welcome {
-			height: 300px;
-			width: 650px;
+			height: 40vh;
+			min-height: 300px;
+			width: 47%;
+			min-width: 300px;
 			padding: 25px 25px;
 			border-radius: 15px;
 			background: rgb(211, 211, 211);
@@ -51,7 +53,7 @@
 
 			.top {
 				font-family: Hind;
-				font-size: 16px;
+				font-size: clamp(0.9rem, 2vw, 4rem);
 				font-weight: 400;
 			}
 
@@ -63,11 +65,11 @@
 				justify-content: center;
 				font-weight: 700;
 				h2 {
-					font-size: 52px;
+					font-size: clamp(1.2rem, 3vw, 4rem);
 				}
 
 				h3 {
-					font-size: 64px;
+					font-size: clamp(1.2rem, 4vw, 4rem);
 				}
 			}
 
@@ -75,7 +77,7 @@
 				font-family: inherit;
 				.btn-container {
 					height: 50px;
-					width: 650px;
+					width: 55vw;
 					display: flex;
 					flex-direction: row;
 					align-items: center;
@@ -85,18 +87,19 @@
 					.btn {
 						margin: 20px;
 						padding: 7px;
-						font-size: 24px;
+						font-size: clamp(0.9rem, 1.5vw, 2rem);
+
 						font-family: Hind;
 						color: rgb(255, 255, 255);
 						background-color: $buttonColor;
 						outline: none;
 						border-style: none;
-						border-radius: 15px;
 						cursor: pointer;
-						transition: all 0.5s ease;
+						border-radius: 15px;
 
 						&:hover {
 							background-color: $buttonHover;
+							transition: all 0.5s ease;
 						}
 					}
 				}
