--- a/src/pages/partners/components/influencer/influencers.scss
+++ b/src/pages/partners/components/influencer/influencers.scss
@@ -11,7 +11,8 @@
 
 		.center {
 			height: 50%;
-			width: 80%;
+			max-width: 60%;
+
 			display: flex;
 			align-items: center;
 			justify-content: space-around;
