--- a/src/pages/home/components/JoinInfo/howJoinBar.scss
+++ b/src/pages/home/components/JoinInfo/howJoinBar.scss
@@ -1,9 +1,9 @@
 @import "../../../../global.scss";
 
-.WhyJoinBar {
+.HowJoinBar {
 	width: 100%;
 	height: 205px;
-	background-color: $black;
+	background-color: $brandColor;
 	display: flex;
 	align-items: center;
 	justify-content: center;
