--- a/src/pages/home/components/dashboard/dashboard.scss
+++ b/src/pages/home/components/dashboard/dashboard.scss
@@ -5,6 +5,7 @@
 	flex: 1;
 	align-items: center;
 	justify-content: center;
+	background: $backgroundColor;
 	.container {
 		width: 90vw;
 		background-color: #f5f5f5;
@@ -31,6 +32,10 @@
 				position: relative;
 				cursor: pointer;
 				img {
+					-webkit-filter: grayscale(
+						100%
+					); /* Safari 6.0 - 9.0 */
+					filter: grayscale(100%);
 					width: 100%;
 					height: 100%;
 					object-fit: cover;
