--- a/src/pages/get started page/components/gs1/gs1.scss
+++ b/src/pages/get started page/components/gs1/gs1.scss
@@ -30,9 +30,9 @@
 
 		.container {
 			width: 100%;
-			height: 80%;
+			height: 70%;
 			display: flex;
-			align-content: center;
+			align-content: inherit;
 			justify-content: center;
 			border-right: 3px solid white;
 			font-family: "Hind";
@@ -42,56 +42,28 @@
 			.textBox {
 				color: white;
 				text-align: center;
+				line-height: 2em;
 				display: flex;
 				align-items: center;
-				justify-content: center;
+				justify-content: space-around;
 				flex-direction: column;
 
 				h1 {
-					font-size: 2.4vw;
 					position: absolute;
-					top: 15px;
+					top: 10%;
+					font-size: 2.3vw;
+					line-height: 1vh;
 				}
 				h2 {
+					margin-top: 10%;
 					font-weight: 400;
-					font-size: 2.3vw;
-					margin: 5%;
-					width: 250px;
+					font-size: 1.7vw;
+					padding: 5%;
+					line-height: 4vh;
 				}
 			}
-		}
-
-		.rContainer {
-			width: 100%;
-			height: 80%;
-			display: flex;
-			align-content: center;
-			justify-content: center;
-			border-right: 3px solid white;
-			font-family: "Hind";
-			font-weight: 700;
-			position: relative;
-
-			.textBox {
-				color: white;
-				text-align: center;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				flex-direction: column;
-				position: relative;
-
-				h1 {
-					font-size: 2.4vw;
-					position: absolute;
-					top: 5px;
-				}
-				h2 {
-					font-weight: 400;
-					font-size: 2.3vw;
-					padding-top: 15%;
-					width: 250px;
-				}
+			&:last-child {
+				border-right: none;
 			}
 		}
 	}
@@ -102,15 +74,15 @@
 		z-index: 2;
 		margin: 75px;
 		width: 90%;
-		height: 388px;
+		height: 250px;
 
 		.right {
-			width: 40%;
-			height: 90%;
+			width: 350px;
+			height: 100%;
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			margin-left: 50px;
+			margin-right: 50px;
 			img {
 				height: 100%;
 				width: 100%;
@@ -120,8 +92,9 @@
 		.left {
 			display: flex;
 			background-color: $brandColor;
-			width: 80%;
-			height: 90%;
+			width: 82%;
+			height: 100%;
+			margin-right: 50px;
 
 			.textBox {
 				width: 100%;
@@ -137,9 +110,11 @@
 
 					h1 {
 						font-size: 2.3vw;
+						font-weight: 600;
 						margin: 10px;
 					}
 					p {
+						font-weight: 500;
 						margin-bottom: 195px;
 						margin: 10px;
 						font-size: 1.8vw;
