--- a/src/pages/get started page/components/gs2/gs2.scss
+++ b/src/pages/get started page/components/gs2/gs2.scss
@@ -1,7 +1,7 @@
 @import "../../../../global.scss";
 
 .gs2 {
-	height: 175vh;
+	height: 150vh;
 	width: 100%;
 	background-color: #f6f6f6;
 	display: flex;
@@ -23,8 +23,8 @@
 		flex: 0.4;
 		z-index: 2;
 		background-color: #b1bebf;
-		margin-top: 100px;
-		margin-bottom: 75px;
+		margin-top: 80px;
+		margin-bottom: 60px;
 		width: 90%;
 		height: 25%;
 
@@ -44,10 +44,13 @@
 				text-align: center;
 				display: flex;
 				align-items: center;
-				justify-content: center;
+				justify-content: space-around;
 				flex-direction: column;
+				position: relative;
 
 				h1 {
+					position: absolute;
+					top: 10%;
 					font-size: 2.3vw;
 					line-height: 1vh;
 				}
@@ -59,37 +62,8 @@
 					line-height: 4vh;
 				}
 			}
-		}
-	}
-
-	.rContainer {
-		width: 100%;
-		height: 70%;
-		display: flex;
-		align-content: inherit;
-		justify-content: center;
-		font-family: "Hind";
-		font-weight: 700;
-		position: relative;
-
-		.textBox {
-			color: white;
-			text-align: center;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			flex-direction: column;
-
-			h1 {
-				font-size: 2.3vw;
-				line-height: 1vh;
-			}
-			h2 {
-				margin-top: 10%;
-				font-weight: 400;
-				font-size: 1.7vw;
-				padding: 6%;
-				line-height: 4vh;
+			&:last-child {
+				border-right: none;
 			}
 		}
 	}
@@ -119,7 +93,7 @@
 		.right {
 			display: flex;
 			background-color: $brandColor;
-			width: 80%;
+			width: 82%;
 			height: 100%;
 
 			.textBox {
@@ -136,9 +110,11 @@
 
 					h1 {
 						font-size: 2.3vw;
+						font-weight: 600;
 						margin: 10px;
 					}
 					p {
+						font-weight: 500;
 						margin-bottom: 195px;
 						margin: 10px;
 						font-size: 1.8vw;
