--- a/src/pages/home/components/dashboard/dashboard.scss
+++ b/src/pages/home/components/dashboard/dashboard.scss
@@ -7,7 +7,7 @@
 	justify-content: center;
 	background: $backgroundColor;
 	.container {
-		width: 90vw;
+		width: 60vw;
 		background-color: #f5f5f5;
 		display: flex;
 		align-items: center;
@@ -21,12 +21,12 @@
 			display: flex;
 			flex-direction: row;
 			align-items: center;
-			justify-content: space-between;
+			justify-content: center;
 			flex-wrap: wrap;
 
 			.card {
 				background-color: $buttonColor;
-				width: 18%;
+				width: 30%;
 				height: 35%;
 				margin: 1%;
 				position: relative;
