--- a/src/pages/get started page/components/cta/cta.scss
+++ b/src/pages/get started page/components/cta/cta.scss
@@ -1,7 +1,7 @@
 @import "../../../../global.scss";
 
-.gs2 {
-	height: 125vh;
+.cta {
+	height: 75vh;
 	width: 100%;
 	background-color: #f6f6f6;
 	display: flex;
@@ -11,61 +11,16 @@
 	.backgroundColumn {
 		height: 100%;
 		width: 50%;
-		background-color: rgba(221, 239, 241, 0.95);
+		background: rgb(221, 239, 241);
+		background: rgb(219, 219, 219);
+		background: linear-gradient(
+			90deg,
+			rgba(219, 219, 219, 0) 0%,
+			rgba(221, 239, 241, 1) 100%,
+			rgba(177, 190, 191, 0) 100%
+		);
 		z-index: 1;
 		position: absolute;
-	}
-	.top {
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		justify-content: center;
-		flex: 0.4;
-		z-index: 2;
-		background-color: #b1bebf;
-		margin-top: 80px;
-		margin-bottom: 60px;
-		width: 90%;
-		height: 25%;
-
-		.container {
-			width: 100%;
-			height: 70%;
-			display: flex;
-			align-content: inherit;
-			justify-content: center;
-			border-right: 3px solid white;
-			font-family: "Hind";
-			font-weight: 700;
-			position: relative;
-
-			.textBox {
-				color: white;
-				text-align: center;
-				display: flex;
-				align-items: center;
-				justify-content: space-around;
-				flex-direction: column;
-				position: relative;
-
-				h1 {
-					position: absolute;
-					top: 10%;
-					font-size: 2.3vw;
-					line-height: 1vh;
-				}
-				h2 {
-					margin-top: 10%;
-					font-weight: 400;
-					font-size: 1.7vw;
-					padding: 5%;
-					line-height: 4vh;
-				}
-			}
-			&:last-child {
-				border-right: none;
-			}
-		}
 	}
 
 	.bottom {
