--- a/src/pages/home/components/landing/landing.scss
+++ b/src/pages/home/components/landing/landing.scss
@@ -28,9 +28,9 @@
 
 		.welcome {
 			height: 40vh;
-			min-height: 300px;
-			width: 47%;
+			min-height: 350px;
 			min-width: 300px;
+			max-width: 700px;
 			padding: 25px 25px;
 			border-radius: 15px;
 			background: rgb(211, 211, 211);
