--- a/src/pages/home/components/news/news.scss
+++ b/src/pages/home/components/news/news.scss
@@ -2,12 +2,7 @@
 
 .news {
 	height: 100vh;
-	background: linear-gradient(
-			rgba(255, 255, 255, 0.3),
-			rgba(255, 255, 255, 0.1)
-		),
-		url(https://images.unsplash.com/photo-1543269865-cbf427effbad?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80)
-			center;
+	background-color: $brandColor;
 	display: flex;
 	align-items: center;
 	justify-content: center;
