fixed footer spacing  and added sentence

--- a/src/pages/home/components/dashboard/dashboardBar.scss
+++ b/src/pages/home/components/dashboard/dashboardBar.scss
@@ -1,6 +1,6 @@
 @import "../../../../global.scss";
 
-.dashboardBarBar {
+.dashboardBar {
 	width: 100%;
 	height: 205px;
 	background-color: $black;
