--- a/src/pages/partners/components/previous supporter/PreviousSupporter.scss
+++ b/src/pages/partners/components/previous supporter/PreviousSupporter.scss
@@ -26,6 +26,7 @@
 			a {
 				font-size: clamp(1rem, 2vw, 2rem);
 				.centerCard {
+					font-family: "Hind";
 					display: flex;
 					justify-content: center;
 					align-items: center;
