--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -19,10 +19,11 @@
 		flex-direction: row;
 
 		.right {
+			padding-right: 7%;
 			display: flex;
 			align-items: center;
 			justify-content: space-around;
-			flex: 0.35;
+			flex: 0.25;
 			flex-direction: row;
 			float: right;
 			a {
@@ -42,14 +43,19 @@
 			}
 		}
 		.left {
+			padding-left: 5%;
 			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			flex: 0.55;
+			// justify-content: center;
+			align-items: center;
+			flex: 0.75;
 			img {
 				width: 75px;
-				height: 75px;
-				object-fit: contain;
+				height: 55px;
+				object-fit: scale-down;
+			}
+			h1 {
+				margin-left: 25%;
+				font-size: clamp(1rem, 1.5vw, 3.5rem);
 			}
 		}
 	}
