--- a/src/pages/home/components/dashboard/dashboard.scss
+++ b/src/pages/home/components/dashboard/dashboard.scss
@@ -1,10 +1,16 @@
 @import "../../../../global.scss";
 
 .dashboard {
+	margin-top: 5%;
 	display: flex;
 	flex: 1;
 	align-items: center;
 	justify-content: center;
+	background-image: linear-gradient(
+		to top,
+		$backgroundColor,
+		rgba(255, 255, 255, 0)
+	);
 	.container {
 		width: 60vw;
 		background-color: #f5f5f5;
