--- a/src/pages/home/components/JoinInfo/JoinInfo.scss
+++ b/src/pages/home/components/JoinInfo/JoinInfo.scss
@@ -9,6 +9,8 @@
 	justify-content: center;
 
 	.container {
+		width: 100%;
+		height: 100%;
 		position: relative;
 		margin-bottom: 300px;
 		display: flex;
@@ -18,9 +20,9 @@
 
 		.infoContainer {
 			position: absolute;
-			margin-top: 550px;
+			margin-top: 45%;
 			width: 80vw;
-			height: 20%;
+			height: 200px;
 			display: flex;
 			align-items: center;
 			justify-content: center;
@@ -32,8 +34,8 @@
 				justify-content: center;
 				align-items: center;
 				height: 20vh;
-				min-height: 100px;
-				width: 25%;
+				min-height: 125px;
+				width: 15%;
 				margin: 3%;
 				background-color: $brandColor;
 				color: white;
@@ -44,11 +46,11 @@
 					position: absolute;
 					font-family: Hind;
 					font-weight: 500;
-					font-size: 1.3vw;
+					font-size: 1.1vw;
 					display: flex;
 					align-items: center;
 					text-align: center;
-					padding: 10px;
+					padding: 5%;
 				}
 
 				&:hover {
@@ -64,21 +66,20 @@
 			display: flex;
 			flex-direction: row;
 			justify-content: center;
-			height: 600px;
+			height: 50vh;
 			width: 80vw;
-			overflow: hidden;
 		}
 		.card {
 			height: 100%;
-			width: 30%;
+			width: 17%;
 			margin: 2%;
 			border-radius: 200px;
-			margin-top: 200px;
+			margin-top: 10%;
 			img {
 				width: 100%;
 				height: 100%;
 				object-fit: cover;
-				border-radius: 200px;
+				border-radius: 50% 50% 10% 10% / 25% 25% 0% 0%;
 			}
 		}
 	}
