--- a/src/pages/get started page/components/GsLanding/gsLanding.scss
+++ b/src/pages/get started page/components/GsLanding/gsLanding.scss
@@ -45,11 +45,14 @@
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			justify-content: space-around;
+			justify-content: center;
 			bottom: 75px;
 			position: absolute;
 
 			.top {
+				display: flex;
+				align-items: center;
+				justify-content: center;
 				padding-top: 20px;
 				font-family: Hind;
 				font-size: 24px;
