--- a/src/pages/get started page/components/gs1/gs1.scss
+++ b/src/pages/get started page/components/gs1/gs1.scss
@@ -1,19 +1,18 @@
 @import "../../../../global.scss";
 
 .gs1 {
-	height: 175vh;
+	height: 125vh;
 	width: 100%;
 	background-color: #f6f6f6;
 	display: flex;
 	align-items: center;
-	justify-content: center;
 	position: relative;
 	flex-direction: column;
 
 	.backgroundColumn {
 		height: 100%;
 		width: 50%;
-
+		background-color: rgba(221, 239, 241, 0.95);
 		z-index: 1;
 		position: absolute;
 	}
@@ -26,7 +25,7 @@
 		z-index: 2;
 		background-color: #b1bebf;
 		width: 90%;
-		height: 80%;
+		margin-top: 5%;
 
 		.container {
 			width: 100%;
@@ -42,22 +41,22 @@
 			.textBox {
 				color: white;
 				text-align: center;
-				line-height: 2em;
 				display: flex;
 				align-items: center;
 				justify-content: space-around;
 				flex-direction: column;
+				position: relative;
 
 				h1 {
 					position: absolute;
 					top: 10%;
-					font-size: 2.3vw;
+					font-size: clamp(1rem, 1.8vw, 2rem);
 					line-height: 1vh;
 				}
 				h2 {
 					margin-top: 10%;
 					font-weight: 400;
-					font-size: 1.7vw;
+					font-size: clamp(1rem, 1.6vw, 2rem);
 					padding: 5%;
 					line-height: 4vh;
 				}
@@ -67,21 +66,22 @@
 			}
 		}
 	}
+
 	.top {
 		display: flex;
 		flex-direction: row;
-		flex: 0.4;
+		flex: 0.5;
 		z-index: 2;
 		margin: 75px;
 		width: 90%;
 
 		.right {
-			width: 350px;
+			width: 30%;
 			height: 100%;
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			margin-right: 50px;
+			margin-left: 5%;
 			img {
 				height: 100%;
 				width: 100%;
@@ -91,9 +91,8 @@
 		.left {
 			display: flex;
 			background-color: $brandColor;
-			width: 82%;
+			width: 65%;
 			height: 100%;
-			margin-right: 50px;
 
 			.textBox {
 				width: 100%;
@@ -105,27 +104,27 @@
 
 				.text {
 					color: white;
-					margin-top: 15px;
+					margin: 2%;
 
 					h1 {
-						font-size: 2.3vw;
+						font-size: clamp(1rem, 2vw, 3rem);
 						font-weight: 600;
 						margin: 10px;
 					}
-					p {
+					h2 {
 						font-weight: 500;
 						margin-bottom: 195px;
 						margin: 10px;
-						font-size: 1.8vw;
+						font-size: clamp(1rem, 1.7vw, 2rem);
 					}
 					ul {
 						margin-bottom: 20px;
-						font-size: 1.5vw;
-						margin: 10px;
+						font-size: clamp(1rem, 1.5vw, 2rem);
+						margin: 1%;
 
 						li {
 							list-style: none;
-							margin-bottom: 10px;
+							margin-bottom: 1%;
 						}
 					}
 				}
