--- a/src/pages/home/components/JoinInfo/JoinInfo.scss
+++ b/src/pages/home/components/JoinInfo/JoinInfo.scss
@@ -22,7 +22,7 @@
 			position: absolute;
 			margin-top: 45%;
 			width: 80vw;
-			height: 200px;
+			height: 50%;
 			display: flex;
 			align-items: center;
 			justify-content: center;
@@ -33,8 +33,8 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				height: 20vh;
-				min-height: 125px;
+				height: 35%;
+				min-height: 85px;
 				width: 15%;
 				margin: 3%;
 				background-color: $brandColor;
