--- a/src/pages/home/components/landing/landing.scss
+++ b/src/pages/home/components/landing/landing.scss
@@ -12,7 +12,6 @@
 		url(https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3000&q=3000)
 			center;
 	min-width: 100%;
-	min-width: 100%;
 	background-size: cover;
 	background-position: center;
 
@@ -43,15 +42,17 @@
 			);
 			backdrop-filter: blur(10px);
 			-webkit-backdrop-filter: blur(10px);
-			position: absolute;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			justify-content: space-between;
+			// justify-content: center;
 			bottom: 75px;
 			position: absolute;
 
 			.top {
+				display: flex;
+				justify-content: center;
+				align-items: center;
 				font-family: Hind;
 				font-size: clamp(0.9rem, 2vw, 4rem);
 				font-weight: 400;
