--- a/src/pages/partners/components/influencer/influencers.scss
+++ b/src/pages/partners/components/influencer/influencers.scss
@@ -15,13 +15,12 @@
 
 		.center {
 			height: 50%;
-			max-width: 60%;
-
+			max-width: 55%;
 			display: flex;
 			align-items: center;
-			justify-content: space-around;
 			flex-wrap: wrap;
-			padding: 5% 0 5% 0;
+			padding: 5% 0 10% 0;
+			justify-content: space-around;
 
 			a {
 				.centerCard {
@@ -37,11 +36,10 @@
 					);
 					box-shadow: 5px 5px 10px #d9d9d9,
 						-5px -5px 10px #ffffff;
-					width: 300px;
-					height: 150px;
-					transition: all 0.5s ease-in-out;
+					width: min(300px, 20vw);
+					height: min(200px, 18vh);
 					cursor: pointer;
-					margin: 10%;
+					margin-top: 20%;
 
 					img {
 						width: 80%;
@@ -59,6 +57,7 @@
 						);
 						box-shadow: 25px 25px 50px #d9d9d9,
 							-25px -25px 50px #ffffff;
+						transition: all 0.5s ease-in-out;
 					}
 				}
 			}
