--- a/src/pages/home/components/about/about.scss
+++ b/src/pages/home/components/about/about.scss
@@ -10,6 +10,9 @@
 		rgba(171, 230, 230, 0.9),
 		#f5f5f5
 	);
+	@include ipad {
+		height: 115vh;
+	}
 	.about-wrapper {
 		height: 90%;
 		width: 80%;
@@ -26,7 +29,6 @@
 				font-style: normal;
 				font-weight: bold;
 				font-size: clamp(0.7rem, 3.1vw, 4rem);
-
 				line-height: 2.7vh;
 			}
 
@@ -39,6 +41,10 @@
 				font-size: clamp(0.7rem, 1.5vw, 2rem);
 				line-height: 4.6vh;
 				margin: 3% 0 0 10%;
+				@include ipad {
+					font-size: clamp(1rem, 3vw, 2rem);
+					line-height: 3vh;
+				}
 			}
 		}
 
