--- a/src/pages/home/components/whyJoin/WhyJoinInfo.scss
+++ b/src/pages/home/components/whyJoin/WhyJoinInfo.scss
@@ -1,7 +1,7 @@
 @import "../../../../global.scss";
 
 .wji {
-	height: 115vh;
+	height: 100vh;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -10,6 +10,8 @@
 		#f5f5f5,
 		rgba(171, 230, 230, 0.9)
 	);
+	@include ipad {
+	}
 
 	.wji-wrapper {
 		height: 90%;
@@ -17,6 +19,9 @@
 		display: flex;
 		position: absolute;
 		top: 0;
+		@include ipad {
+			height: 100%;
+		}
 
 		.wji-left {
 			display: flex;
@@ -24,17 +29,25 @@
 			justify-content: space-around;
 			flex: 1.2;
 			background-color: $backgroundColor;
+			@include ipad {
+				font-size: clamp(0.7rem, 6vw, 5rem);
+				line-height: 5vh;
+				padding: 15% 0 15% 0;
+			}
 
 			.wji-text {
 				width: 80%;
 				display: flex;
 				justify-content: space-around;
-
 				align-items: center;
 				font-family: "Hind";
 				font-size: 1.6vw;
 				line-height: 5.5vh;
 				margin: 4% 0 0 10%;
+				@include ipad {
+					font-size: clamp(0.7rem, 3vw, 4rem);
+					line-height: 5vh;
+				}
 			}
 
 			.wji-button-container {
