--- a/src/main components/footer/footer.scss
+++ b/src/main components/footer/footer.scss
@@ -26,6 +26,9 @@
 			flex: 0.25;
 			flex-direction: row;
 			float: right;
+			@include ipad {
+				padding-right: 5%;
+			}
 			a {
 				text-decoration: none;
 				color: inherit;
@@ -45,9 +48,11 @@
 		.left {
 			padding-left: 5%;
 			display: flex;
-			// justify-content: center;
 			align-items: center;
 			flex: 0.75;
+			@include ipad {
+				padding-left: 2%;
+			}
 			img {
 				width: 75px;
 				height: 55px;
@@ -56,6 +61,10 @@
 			h1 {
 				margin-left: 25%;
 				font-size: clamp(1rem, 1.5vw, 3.5rem);
+				@include ipad {
+					font-size: clamp(0.5rem, 2.8vw, 2rem);
+					margin-left: 10%;
+				}
 			}
 		}
 	}
