--- a/src/pages/clubs/components/alumni/alumni.scss
+++ b/src/pages/clubs/components/alumni/alumni.scss
@@ -70,10 +70,16 @@
 						color: white;
 						h1 {
 							font-size: clamp(1.5rem, 1.3vw, 2.3rem);
+							@include ipad {
+								font-size: clamp(1.5rem, 1.5vw, 2.3rem);
+							}
 						}
 						h2 {
 							font-size: clamp(1rem, 1.4vw, 1.3rem);
 							font-weight: 200;
+							@include ipad {
+								font-size: clamp(1.5rem, 1.9vw, 2.3rem);
+							}
 						}
 					}
 				}
