--- a/src/pages/clubs/components/clanding/cLanding.scss
+++ b/src/pages/clubs/components/clanding/cLanding.scss
@@ -1,15 +1,15 @@
 @import "../../../../global.scss";
 
 .cLanding {
-	// height: 100vh;
-	// width: 100vw;
+	height: 100vh;
+	width: 100vw;
 	position: relative;
 	overflow: hidden;
 	background: linear-gradient(
 			rgba(255, 255, 255, 0.3),
 			rgba(255, 255, 255, 0.1)
 		),
-		url(https://images.pexels.com/photos/5676744/pexels-photo-5676744.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)
+		url(https://images.unsplash.com/photo-1527784011719-3349bf049cf4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80)
 			center;
 	min-width: 100%;
 	min-width: 100%;
@@ -17,8 +17,8 @@
 	background-position: center;
 
 	.wrapper {
-		height: 100vh;
-		width: 100vw;
+		height: 100%;
+		width: 100%;
 		overflow: hidden;
 		position: relative;
 		display: flex;
@@ -27,9 +27,8 @@
 		position: relative;
 
 		.welcome {
-			height: 40vh;
-			min-height: 160px;
-			width: 47%;
+			height: 300px;
+			width: 650px;
 			padding: 25px 25px;
 			border-radius: 15px;
 			background: rgb(211, 211, 211);
@@ -46,24 +45,21 @@
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			justify-content: space-between;
-			bottom: 50px;
+			justify-content: center;
+			bottom: 75px;
 			position: absolute;
 
 			.center {
-				margin-top: 12%;
-				font-family: "Saira", sans-serif;
 				display: flex;
-				flex-direction: column;
 				align-items: center;
 				justify-content: center;
-				font-weight: 700;
-				h2 {
-					font-size: 3vw;
-				}
-
-				h3 {
-					font-size: 3vw;
+				flex-direction: column;
+				padding-top: 20px;
+				font-family: Hind;
+				font-size: 24px;
+				font-weight: 500;
+				@include ipad {
+					font-size: clamp(0.9rem, 5vw, 4rem);
 				}
 			}
 		}
