--- a/src/pages/get started page/components/devices/Devices.scss
+++ b/src/pages/get started page/components/devices/Devices.scss
@@ -7,6 +7,9 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	@include ipad {
+		height: 80vh;
+	}
 
 	.container {
 		position: relative;
@@ -25,6 +28,9 @@
 			align-items: center;
 			justify-content: center;
 			z-index: 1;
+			@include ipad {
+				margin-top: 250px;
+			}
 			.infoBox {
 				position: relative;
 				display: flex;
@@ -37,6 +43,11 @@
 				color: white;
 				cursor: pointer;
 				transition: all 0.9s ease;
+				@include ipad {
+					height: 20vh;
+					width: 30%;
+					margin: 3%;
+				}
 
 				h1 {
 					position: absolute;
@@ -47,6 +58,9 @@
 					align-items: center;
 					text-align: center;
 					padding: 10px;
+					@include ipad {
+						font-size: clamp(1rem, 3vw, 3rem);
+					}
 				}
 
 				&:hover {
@@ -63,25 +77,38 @@
 			height: 600px;
 			width: 80vw;
 			overflow: hidden;
+			@include ipad {
+				height: 600px;
+				width: 90vw;
+			}
 		}
 		.card {
 			height: 100%;
-			width: 50%;
-			margin: 2%;
+			width: 40%;
+			margin: 1%;
 			border-radius: 200px;
 			margin-top: 200px;
 			display: flex;
 			align-items: center;
 			justify-content: center;
 			position: relative;
+			@include ipad {
+				width: 28%;
+				margin: 1%;
+			}
 			img {
-				width: 70%;
-				height: 70%;
+				width: 100%;
+				height: 100%;
 				object-fit: cover;
 				border-radius: 50px;
 				object-fit: scale-down;
 				position: absolute;
-				bottom: 45%;
+				bottom: 20%;
+				position: relative;
+				@include ipad {
+					width: 90%;
+					height: 90%;
+				}
 			}
 		}
 	}
