--- a/src/pages/get started page/components/gs2/gs2.scss
+++ b/src/pages/get started page/components/gs2/gs2.scss
@@ -8,6 +8,9 @@
 	align-items: center;
 	position: relative;
 	flex-direction: column;
+	@include ipad {
+		height: 115vh;
+	}
 	.backgroundColumn {
 		height: 100%;
 		width: 50%;
@@ -24,9 +27,10 @@
 		z-index: 2;
 		background-color: #b1bebf;
 		width: 90%;
-		height: 25%;
 		margin-top: 5%;
-
+		@include ipad {
+			flex: 0.5;
+		}
 		.container {
 			width: 100%;
 			height: 70%;
@@ -51,14 +55,23 @@
 					position: absolute;
 					top: 10%;
 					font-size: clamp(1rem, 1.8vw, 2rem);
-					line-height: 1vh;
+					line-height: 1.5vh;
+					@include ipad {
+						top: 0;
+						font-size: clamp(1rem, 3.2vw, 2rem);
+						line-height: 2.5vh;
+					}
 				}
 				h2 {
 					margin-top: 10%;
 					font-weight: 400;
-					font-size: clamp(1rem, 1.7vw, 2rem);
+					font-size: clamp(1rem, 1.7vw, 3rem);
 					padding: 5%;
 					line-height: 4vh;
+					@include ipad {
+						font-size: clamp(1rem, 2.9vw, 3rem);
+						line-height: 3vh;
+					}
 				}
 			}
 			&:last-child {
@@ -75,6 +88,9 @@
 		margin: 5%;
 		width: 90%;
 		height: 80%;
+		@include ipad {
+			flex: 0.4;
+		}
 
 		.left {
 			width: 30%;
@@ -111,17 +127,26 @@
 						font-size: clamp(1rem, 2vw, 3rem);
 						font-weight: 600;
 						margin: 10px;
+						@include ipad {
+							font-size: clamp(1rem, 4vw, 3rem);
+						}
 					}
 					h2 {
 						font-weight: 500;
 						margin-bottom: 195px;
 						margin: 10px;
 						font-size: clamp(1rem, 1.7vw, 2rem);
+						@include ipad {
+							font-size: clamp(1rem, 3vw, 3rem);
+						}
 					}
 					ul {
 						margin-bottom: 20px;
 						font-size: clamp(1rem, 1.5vw, 2rem);
 						margin: 1%;
+						@include ipad {
+							font-size: clamp(1rem, 3vw, 3rem);
+						}
 
 						li {
 							list-style: none;
