--- a/src/pages/home/components/JoinInfo/JoinInfo.scss
+++ b/src/pages/home/components/JoinInfo/JoinInfo.scss
@@ -11,6 +11,9 @@
 		#f5f5f5,
 		rgba(171, 230, 230, 0.9)
 	);
+	@include ipad {
+		height: 80vh;
+	}
 
 	.container {
 		width: 100%;
@@ -31,6 +34,10 @@
 			align-items: center;
 			justify-content: center;
 			z-index: 1;
+			@include ipad {
+				width: 100vw;
+				height: 50%;
+			}
 
 			.infoBox {
 				position: relative;
@@ -45,16 +52,23 @@
 				color: white;
 				cursor: pointer;
 				transition: all 0.9s ease;
+				@include ipad {
+					width: 18%;
+					margin: 3%;
+				}
 
 				h1 {
 					position: absolute;
 					font-family: Hind;
 					font-weight: 500;
-					font-size: 1.1vw;
+					font-size: clamp(1rem, 1.1vw, 2rem);
 					display: flex;
 					align-items: center;
 					text-align: center;
 					padding: 5%;
+					@include ipad {
+						font-size: clamp(1rem, 2.1vw, 2.5rem);
+					}
 				}
 
 				&:hover {
@@ -72,6 +86,10 @@
 			justify-content: center;
 			height: 50vh;
 			width: 80vw;
+			@include ipad {
+				height: 30vh;
+				width: 100vw;
+			}
 		}
 		.card {
 			height: 100%;
@@ -79,6 +97,11 @@
 			margin: 2%;
 			border-radius: 200px;
 			margin-top: 10%;
+			@include ipad {
+				height: 100%;
+				width: 19%;
+				margin: 2.5%;
+			}
 			img {
 				width: 100%;
 				height: 100%;
