--- a/src/pages/home/components/competition/competitionInfo.scss
+++ b/src/pages/home/components/competition/competitionInfo.scss
@@ -3,6 +3,9 @@
 .competition-i {
 	height: 100vh;
 	background-color: #f5f5f5;
+	@include ipad {
+		height: 90vh;
+	}
 	.competition-wrapper {
 		width: 100%;
 		height: 100vh;
@@ -27,6 +30,10 @@
 			position: absolute;
 			bottom: 0;
 			border-top: none;
+			@include ipad {
+				width: 90%;
+				height: 90vh;
+			}
 			img {
 				height: 90%;
 				width: 90%;
