--- a/src/pages/home/components/dashboard/dashboard.scss
+++ b/src/pages/home/components/dashboard/dashboard.scss
@@ -18,6 +18,9 @@
 		align-items: center;
 		justify-content: center;
 		margin-bottom: 10%;
+		@include ipad {
+			width: 90vw;
+		}
 
 		.cards {
 			width: 100%;
@@ -66,6 +69,9 @@
 						font-family: Hind;
 						font-weight: 600;
 						font-size: clamp(0.5rem, 1.3vw, 2rem);
+						@include ipad {
+							font-size: clamp(0.5rem, 3vw, 2rem);
+						}
 					}
 				}
 				&:hover {
