--- a/src/pages/partners/components/main partners/main.scss
+++ b/src/pages/partners/components/main partners/main.scss
@@ -32,6 +32,10 @@
 				width: 80vw;
 				height: 50vh;
 			}
+			@include mobile {
+				width: 90vw;
+				height: 60vh;
+			}
 
 			.imgContainer {
 				width: 90%;
