--- a/src/pages/home/components/JoinInfo/JoinInfo.scss
+++ b/src/pages/home/components/JoinInfo/JoinInfo.scss
@@ -14,6 +14,9 @@
 	@include ipad {
 		height: 80vh;
 	}
+	@include mobile {
+		height: 40vh;
+	}
 
 	.container {
 		width: 100%;
@@ -24,7 +27,9 @@
 		align-items: center;
 		justify-content: center;
 		flex-direction: row;
-
+		@include mobile {
+			margin-bottom: 0px;
+		}
 		.infoContainer {
 			position: absolute;
 			margin-top: 45%;
@@ -56,6 +61,10 @@
 					width: 18%;
 					margin: 3%;
 				}
+				@include mobile {
+					width: 30%;
+					margin: 1%;
+				}
 
 				h1 {
 					position: absolute;
@@ -68,6 +77,10 @@
 					padding: 5%;
 					@include ipad {
 						font-size: clamp(1rem, 2.1vw, 2.5rem);
+					}
+					@include mobile {
+						font-size: clamp(0.6rem, 0.7vw, 2rem);
+						padding: 0;
 					}
 				}
 
@@ -93,13 +106,18 @@
 		}
 		.card {
 			height: 100%;
-			width: 17%;
+			width: 18%;
 			margin: 2%;
 			border-radius: 200px;
 			margin-top: 10%;
 			@include ipad {
 				height: 100%;
 				width: 19%;
+				margin: 2.5%;
+			}
+			@include mobile {
+				height: 100%;
+				width: 20%;
 				margin: 2.5%;
 			}
 			img {
