--- a/src/pages/home/components/competition/competitionVideo.scss
+++ b/src/pages/home/components/competition/competitionVideo.scss
@@ -23,7 +23,7 @@
 			justify-content: center;
 			flex-direction: column;
 			background-color: lightcyan;
-			height: 80%;
+			height: 90%;
 			background: #32afbe;
 			background: -webkit-linear-gradient(
 				bottom,
@@ -40,13 +40,16 @@
 				$backgroundColor,
 				#32afbe
 			);
-
-			width: 90%;
+			width: 70%;
 			position: absolute;
 			bottom: 0;
 			border: 1px solid white;
 			border-bottom: none;
 			border-radius: 50% 50% 10% 10% / 66% 62% 0% 0%;
+			@include ipad {
+				width: 90%;
+				height: 90vh;
+			}
 
 			.a-top {
 				position: absolute;
