--- a/src/pages/home/components/whyJoin/WhyJoinInfo.scss
+++ b/src/pages/home/components/whyJoin/WhyJoinInfo.scss
@@ -10,8 +10,6 @@
 		#f5f5f5,
 		rgba(171, 230, 230, 0.9)
 	);
-	@include ipad {
-	}
 
 	.wji-wrapper {
 		height: 90%;
@@ -21,6 +19,10 @@
 		top: 0;
 		@include ipad {
 			height: 100%;
+		}
+		@include mobile {
+			height: 95%;
+			width: 90%;
 		}
 
 		.wji-left {
@@ -33,6 +35,11 @@
 				font-size: clamp(0.7rem, 6vw, 5rem);
 				line-height: 5vh;
 				padding: 15% 0 15% 0;
+			}
+			@include mobile {
+				font-size: clamp(0.7rem, 8vw, 5rem);
+				line-height: 3vh;
+				padding: 0;
 			}
 
 			.wji-text {
@@ -48,6 +55,10 @@
 					font-size: clamp(0.7rem, 3vw, 4rem);
 					line-height: 5vh;
 				}
+				@include mobile {
+					font-size: clamp(0.7rem, 4vw, 4rem);
+					line-height: 3.5vh;
+				}
 			}
 
 			.wji-button-container {
@@ -55,6 +66,10 @@
 				align-items: center;
 				justify-content: center;
 				margin-bottom: 25px;
+				@include mobile {
+					padding: 10%;
+				}
+
 				a {
 					.wji-button {
 						width: 30vw;
@@ -66,6 +81,9 @@
 						font-weight: 600;
 						transition: all 0.5s ease;
 						cursor: pointer;
+						@include mobile {
+							font-size: clamp(0.7rem, 3.5vw, 4rem);
+						}
 
 						&:hover {
 							background-color: $buttonHover;
