--- a/src/pages/partners/components/influencer/influencers.scss
+++ b/src/pages/partners/components/influencer/influencers.scss
@@ -47,6 +47,10 @@
 						width: 40vw;
 						height: 20vh;
 					}
+					@include mobile {
+						width: 35vw;
+						height: 15vh;
+					}
 
 					img {
 						width: 80%;
